--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,1 +1,5 @@
+@import url('izitoast/dist/css/iziToast.min.css');
+@import url('simplelightbox/dist/simple-lightbox.min.css');
 @import url('./reset.css');
+@import url('./loader.css');
+@import url('./gallery.css');
